Final brushups to make code production ready.

--- a/accounts/templates/accounts/account_change/settings.html
+++ b/accounts/templates/accounts/account_change/settings.html
@@ -33,6 +33,7 @@
 </div>
 <script>
     $('p input').addClass('mdl-textfield__input');
+    $('input').attr('autocomplete', 'off');
 </script>
 <style>
     .container {
