--- a/accounts/templates/accounts/complete_registration/complete_brand_reg.html
+++ b/accounts/templates/accounts/complete_registration/complete_brand_reg.html
@@ -14,6 +14,7 @@
 </div>
 <script>
     $('p input').addClass('mdl-textfield__input');
+    $('input').attr('autocomplete', 'off');
     $('label[for="id_phone_number"]').html('Phone number (10-digit):');
     $('label[for="id_website"]').html('Website (Optional):');
     $('label[for="id_instagram_handle"]').html('Instagram handle (Optional):');
