--- a/accounts/templates/accounts/complete_registration/complete_influencer_reg.html
+++ b/accounts/templates/accounts/complete_registration/complete_influencer_reg.html
@@ -12,6 +12,7 @@
 <script>
     $('p input').addClass('mdl-textfield__input');
     $('label[for="id_phone_number"]').html('Phone number (10-digit):');
+    $('input').attr('autocomplete', 'off');
 </script>
 <style>
     .container {
