--- a/brand/templates/brand/profile.html
+++ b/brand/templates/brand/profile.html
@@ -1,6 +1,7 @@
 {% extends base_template %}
 {% load tz %}
 {% load static %}
+{% load influencer_tags %}
 {% load brand_tags %}
 {% block main %}
 <div class="container">
@@ -168,7 +169,7 @@
                                         </div>
                                         <div class="mdl-cell mdl-cell--9-col mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                             <div class="stat-heading">Engagement</div>
-                                            <div class="stat-number">200{{ post.engagement }}</div>
+                                            <div class="stat-number">{{ endorsement.engagement|readable_metric }}</div>
                                         </div>
                                     </div>
                                 </div>
@@ -181,7 +182,7 @@
                                         </div>
                                         <div class="mdl-cell mdl-cell--9-col mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                             <div class="stat-heading">Impressions</div>
-                                            <div class="stat-number">200{{ post.impressions }}</div>
+                                            <div class="stat-number">{{ endorsement.impressions|readable_metric }}</div>
                                         </div>
                                     </div>
                                 </div>
@@ -194,13 +195,24 @@
                                         </div>
                                         <div class="mdl-cell mdl-cell--9-col mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                             <div class="stat-heading">Reach</div>
-                                            <div class="stat-number">200{{ post.reach }}</div>
+                                            <div class="stat-number">{{ endorsement.reach|readable_metric }}</div>
                                         </div>
                                     </div>
                                 </div>
                                 {% if endorsement.media_type == 'VIDEO' %}
-                                <div class="mdl-cell mdl-cell--12-col stat-heading">Views</div>
-                                <div class="mdl-cell mdl-cell--12-col stat-number">200{{ endorsement.video_views }}</div>
+                                <div class="mdl-cell mdl-cell--12-col stat-wrapper">
+                                    <div class="mdl-grid">
+                                        <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-tablet mdl-cell--1-col-phone">
+                                            <div class="img-cover">
+                                                <img class="video-img" src="{% static 'visibility.svg' %}" alt="engagement symbol" />
+                                            </div>
+                                        </div>
+                                        <div class="mdl-cell mdl-cell--9-col mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                            <div class="stat-heading">Views</div>
+                                            <div class="stat-number">{{ endorsement.video_views|readable_metric }}</div>
+                                        </div>
+                                    </div>
+                                </div>
                                 {% endif %}
                             </div>
                         </div>
@@ -635,6 +647,11 @@
         margin-top: 1.5vh !important;
     }
 
+    .video-img {
+        max-width: 100%;
+        opacity: 0.4;
+    }
+
     @media only screen and (max-width: 900px) {
         .container {
             width: 100vw;
@@ -747,6 +764,10 @@
 
         .placeholder-profile-picture {
             font-size: 120px;
+        }
+
+        .video-img {
+            max-width: 150%;
         }
     }
 </style>
