--- a/influencer/templates/influencer/await_verification.html
+++ b/influencer/templates/influencer/await_verification.html
@@ -23,6 +23,7 @@
         font-size: 4em;
         width: 100%;
         text-align: center;
+        color: #0471ff;
     }
 </style>
 {% endblock %}
