--- a/influencer/templates/influencer/facebook_connect.html
+++ b/influencer/templates/influencer/facebook_connect.html
@@ -62,6 +62,7 @@
         font-size: 4em;
         width: 100%;
         text-align: center;
+        color: #0471ff;
     }
 
     .container .mdl-button {
