--- a/influencer/templates/influencer/brands.html
+++ b/influencer/templates/influencer/brands.html
@@ -45,7 +45,7 @@
                                                 <div class="website-wrapper">
                                                     <i class="material-icons">language</i>
                                                     &nbsp;&nbsp;
-                                                    <a target="_blank" href="${result[brand]['fields']['website']}">
+                                                    <a target="_blank" rel="noopener noreferrer" href="${result[brand]['fields']['website']}">
                                                         ${result[brand]['fields']['website']}
                                                     </a>
                                                 </div>
