--- a/influencer/templates/influencer/facebook_connect.html
+++ b/influencer/templates/influencer/facebook_connect.html
@@ -15,7 +15,7 @@
                 below. You may skip this step if you have already added a facebook page to your instagram creator
                 account.
                 <div class="button-container">
-                    <a target="__blank" href="https://help.instagram.com/399237934150902">
+                    <a target="__blank" rel="noopener noreferrer" href="https://help.instagram.com/399237934150902">
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                             <i class="material-icons">open_in_new</i>
                             &nbsp;&nbsp;Instructions
