--- a/brand/templates/brand/influencers.html
+++ b/brand/templates/brand/influencers.html
@@ -8,10 +8,11 @@
             <a href="#your-influencers-panel" class="mdl-tabs__tab">Your Influencers</a>
         </div>
         <div class="mdl-tabs__panel is-active" id="all-influencers-panel">
-            <div class="all-influencer-container"></div>
-            <div class="spinner-wrapper">
-                <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner"></div>
+            <div class="all-influencer-container">
             </div>
+            <button id="load-more" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                Load More
+            </button>
         </div>
         <div class="mdl-tabs__panel" id="your-influencers-panel">
             {% for inf in your_influencers %}
@@ -66,91 +67,71 @@
     $('.influencers-top-nav').addClass('is-active');
     $('main').css('background-color', '#fff');
     var add_influencer_data = () => {
-            $('#all-influencers-panel .mdl-spinner').addClass(`is-active`);
-            $.ajax({
-                cache: false,
-                url: `/brand/fetch-influencers/${ $(window).data('page_no') }/`,
-                success: function (result) {
-                    console.log($(window).data('page_no'));
-                    for (var influencer = 0; influencer < result.length; influencer++) {
-                        console.log(result[influencer]);
-                        $(`.all-influencer-container`).append(`
-                            <div class="influencer-card">
-                                <div class="mdl-grid">
-                                    <div class="mdl-cell mdl-cell--2-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
-                                        ${
-                                            (result[influencer]['fields']['profile_picture'])
-                                            ? `
-                                                <img
-                                                    class="profile-picture-display"
-                                                    src="${result[influencer]['fields']['profile_picture']}"
-                                                />`
-                                            : '<div class="placeholder-wrapper"><i class="material-icons placeholder-profile-picture">account_circle</i></div>'
-                                        }
-                                    </div>
-                                    <div class="mdl-cell mdl-cell--10-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
-                                        <div class="mdl-grid">
-                                            <div class="mdl-cell mdl-cell--12-col name-cell">
-                                                ${result[influencer]['fields']['first_name']} ${result[influencer]['fields']['last_name']}
-                                                <div>
-                                                    <a href="/brand/influencer/${result[influencer]['fields']['user_encoded_pk']}/analytics/">
-                                                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                                                            View Influencer Profile
-                                                        </button>
-                                                    </a>
-                                                </div>
+        $('#load-more').attr("disabled", true);
+        $.ajax({
+            cache: false,
+            url: `/brand/fetch-influencers/${ $(window).data('page_no') }/`,
+            success: function (result) {
+                console.log($(window).data('page_no'));
+                if (result.length === 0) {
+                    $('#load-more').html('No more results.');
+                    return;
+                }
+                for (var influencer = 0; influencer < result.length; influencer++) {
+                    console.log(result[influencer]);
+                    $(`.all-influencer-container`).append(`
+                        <div class="influencer-card">
+                            <div class="mdl-grid">
+                                <div class="mdl-cell mdl-cell--2-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+                                    ${
+                                        (result[influencer]['fields']['profile_picture'])
+                                        ? `
+                                            <img
+                                                class="profile-picture-display"
+                                                src="${result[influencer]['fields']['profile_picture']}"
+                                            />`
+                                        : '<div class="placeholder-wrapper"><i class="material-icons placeholder-profile-picture">account_circle</i></div>'
+                                    }
+                                </div>
+                                <div class="mdl-cell mdl-cell--10-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+                                    <div class="mdl-grid">
+                                        <div class="mdl-cell mdl-cell--12-col name-cell">
+                                            ${result[influencer]['fields']['first_name']} ${result[influencer]['fields']['last_name']}
+                                            <div>
+                                                <a href="/brand/influencer/${result[influencer]['fields']['user_encoded_pk']}/analytics/">
+                                                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                                                        View Influencer Profile
+                                                    </button>
+                                                </a>
                                             </div>
-                                            <hr />
-                                            <div class="mdl-cell mdl-cell--6-col insta-cell">
-                                                <svg viewBox="0 0 24 24">
-                                                    <path fill="#161A1D"
-                                                        d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z">
-                                                    </path>
-                                                </svg>
-                                                &nbsp;&nbsp;${result[influencer]['fields']['username']}
-                                            </div>
-                                            <div class="mdl-cell mdl-cell--6-col followers-cell">
-                                                <i class="material-icons">trending_up</i>
-                                                &nbsp;&nbsp;${result[influencer]['fields']['follower_count']} followers
-                                            </div>
+                                        </div>
+                                        <hr />
+                                        <div class="mdl-cell mdl-cell--6-col insta-cell">
+                                            <svg viewBox="0 0 24 24">
+                                                <path fill="#161A1D"
+                                                    d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z">
+                                                </path>
+                                            </svg>
+                                            &nbsp;&nbsp;${result[influencer]['fields']['username']}
+                                        </div>
+                                        <div class="mdl-cell mdl-cell--6-col followers-cell">
+                                            <i class="material-icons">trending_up</i>
+                                            &nbsp;&nbsp;${result[influencer]['fields']['follower_count']} followers
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        `);
-                    }
-                    $('#all-influencers-panel .mdl-spinner').removeClass(`is-active`);
-                    $(window).data('ajaxready', true);
-                    $(window).data('page_no', $(window).data('page_no') + 1);
+                        </div>
+                    `);
                 }
-            });
-        };
-        $(window).data('page_no', 1);
-        add_influencer_data();
-        function changeOnSmallScreen(x) {
-            if (x.matches) {
-                $('main.mdl-layout__content').data('ajaxready', true).scroll(function (e) {
-                    if ($(window).data('ajaxready') === false) return;
-
-                    if ($(this).scrollTop() + $(this).innerHeight() >= ($(this)[0].scrollHeight) - 0) {
-                        $(window).data('ajaxready', false);
-                        add_influencer_data();
-                    }
-                });
-            } else {
-                $('main.mdl-layout__content').data('ajaxready', true).scroll(function (e) {
-                    if ($(window).data('ajaxready') === false) return;
-
-                    if ($(this).scrollTop() + $(this).innerHeight() >= ($(this)[0].scrollHeight) - 100) {
-                        $(window).data('ajaxready', false);
-                        add_influencer_data();
-                    }
-                });
+                $('#load-more').attr("disabled", false);
+                $(window).data('page_no', $(window).data('page_no') + 1);
             }
-        }
-        var x = window.matchMedia("(max-width: 900px)")
-        changeOnSmallScreen(x);
-        x.addListener(changeOnSmallScreen);
+        });
+    };
+    $(window).data('page_no', 1);
+    add_influencer_data();
+    $('#load-more').click(() => {add_influencer_data();});
 </script>
 <style>
     .container {
@@ -273,26 +254,22 @@
         border: 1px solid #707070;
     }
 
-    .spinner-wrapper {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 5vh;
-        padding-top: 5vh;
-        padding-bottom: 5vh;
-    }
-
-    .mdl-spinner:not(.is-active) {
-        display: none;
-    }
-
-    .mdl-spinner__layer {
-        border-color: #150E41 !important;
-    }
-
     .empty-influencers {
         text-align: center;
         font-size: 2em;
         padding: 5vh;
+    }
+
+    #load-more {
+        width: 80%;
+        margin-left: 10%;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        margin-bottom: 20px;
+    }
+
+    #load-more:disabled {
+        background-color: #bdbdbd !important;
     }
 
     @media only screen and (max-width: 900px) {
@@ -317,8 +294,13 @@
             width: 50%;
         }
 
+        .placeholder-profile-picture {
+            font-size: 100px;
+        }
+
         .mdl-cell.name-cell {
             font-size: 30px;
+            line-height: 30px;
             display: inline-block;
             text-align: center;
         }
@@ -341,12 +323,6 @@
             display: flex;
             align-items: center;
             margin-top: 0;
-        }
-
-        .spinner-wrapper {
-            margin-bottom: 0;
-            padding-bottom: 0;
-            padding-top: 0;
         }
     }
 </style>
