--- a/influencer/templates/influencer/profile_badge.html
+++ b/influencer/templates/influencer/profile_badge.html
@@ -1,5 +1,6 @@
 {% extends base_template %}
 {% load brand_tags %}
+{% load influencer_tags %}
 {% load tz %}
 {% load static %}
 {% block main %}
@@ -93,59 +94,10 @@
                     {% endif %}
                 </div>
                 <div class="mdl-tabs__panel is-active" id="badge-panel">
-                    <div id="card" class="bronze-badge">
-                        <svg class="badge" viewBox="0 0 267.3 427.3">
-                            <defs>
-                                <!-- Gold Card -->
-                                <!-- <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#fff176;" />
-                                    <stop offset="50%" style="stop-color:#fdd835;" />
-                                    <stop offset="50%" style="stop-color:#fff;" />
-                                    <stop offset="50.5%" style="stop-color:#fff;" />
-                                    <stop offset="50.5%" style="stop-color:#fff176;" />
-                                    <stop offset="100%" style="stop-color:#fff176;" />
-                                </linearGradient> -->
-                                <!-- Silver Card -->
-                                <!-- <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#e0e0e0;" />
-                                    <stop offset="50%" style="stop-color:#9e9e9e;" />
-                                    <stop offset="50%" style="stop-color:#fff;" />
-                                    <stop offset="50.5%" style="stop-color:#fff;" />
-                                    <stop offset="50.5%" style="stop-color:#e0e0e0;" />
-                                    <stop offset="100%" style="stop-color:#e0e0e0;" />
-                                </linearGradient> -->
-                                <!-- Bronze Card -->
-                                <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                    <stop offset="0%" style="stop-color:#8d6e63;" />
-                                    <stop offset="50%" style="stop-color:#6d4c41;" />
-                                    <stop offset="50%" style="stop-color:#fff;" />
-                                    <stop offset="50.5%" style="stop-color:#fff;" />
-                                    <stop offset="50.5%" style="stop-color:#8d6e63;" />
-                                    <stop offset="100%" style="stop-color:#8d6e63;" />
-                                </linearGradient>
-                            </defs>
-                            <path fill="url(#gradient)"
-                                d="M265.3 53.9a33.3 33.3 0 0 1-17.8-5.5 32 32 0 0 1-13.7-22.9c-.2-1.1-.4-2.3-.4-3.4 0-1.3-1-1.5-1.8-1.9a163 163 0 0 0-31-11.6A257.3 257.3 0 0 0 133.7 0a254.9 254.9 0 0 0-67.1 8.7 170 170 0 0 0-31 11.6c-.8.4-1.8.6-1.8 1.9 0 1.1-.2 2.3-.4 3.4a32.4 32.4 0 0 1-13.7 22.9A33.8 33.8 0 0 1 2 53.9c-1.5.1-2.1.4-2 2v293.9c0 3.3 0 6.6.4 9.9a22 22 0 0 0 7.9 14.4c3.8 3.2 8.3 5.3 13 6.8 12.4 3.9 24.8 7.5 37.2 11.5a388.7 388.7 0 0 1 50 19.4 88.7 88.7 0 0 1 25 15.5v.1-.1c7.2-7 16.1-11.3 25-15.5a427 427 0 0 1 50-19.4l37.2-11.5c4.7-1.5 9.1-3.5 13-6.8 4.5-3.8 7.2-8.5 7.9-14.4.4-3.3.4-6.6.4-9.9V231.6 60.5v-4.6c.4-1.6-.3-1.9-1.7-2z" />
-                        </svg>
-                        {% if not request.user.is_brand %}
-                            {% if request.user.get_profile_picture %}
-                            <img class="badge-profile-picture" src="{{ request.user.get_profile_picture.url }}" />
-                            {% else %}
-                            <i class="material-icons badge-placeholder-profile-picture">account_circle</i>
-                            {% endif %}
-                        {% else %}
-                            {% if influencer.user.get_profile_picture %}
-                            <img class="badge-profile-picture" src="{{ influencer.user.get_profile_picture.url }}" />
-                            {% else %}
-                            <i class="material-icons badge-placeholder-profile-picture">account_circle</i>
-                            {% endif %}
-                        {% endif %}
-                        <div class="badge-followers">
-                            {{ fb_permissions.ig_follower_count }}<br /><span>FOLLOWERS</span>
-                        </div>
-                        <img class="badge-verified-gif" src="{% static 'verified.gif' %}" alt="verified" />
-                        <div class="badge-instagram">
-                            {{ fb_permissions.ig_username }}
+                    <div>
+                        <img src="{% static fb_permissions.influencer|influencer_category|add:'-badge.png' %}" alt="badge">
+                        <div class="follower-count text-on-{{ fb_permissions.influencer|influencer_category }}">
+                            {{ fb_permissions.ig_follower_count|readable_metric }}
                         </div>
                     </div>
                 </div>
@@ -360,87 +312,6 @@
         max-width: 1.5vw;
     }
 
-    #badge-panel {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: transparent;
-    }
-
-    #card {
-        position: relative;
-        margin-top: 5vh;
-    }
-
-    #card svg.badge {
-        height: 55vh;
-    }
-
-    .badge-profile-picture {
-        position: absolute;
-        width: 10vw;
-        top: 25%;
-        left: 50%;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        border: 1px solid #161A1D;
-    }
-
-    .badge-placeholder-profile-picture {
-        position: absolute;
-        font-size: 10vw;
-        top: 25%;
-        left: 50%;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    .badge-followers {
-        position: absolute;
-        transform: translate(-50%, -50%);
-        font-size: 2em;
-        top: 75%;
-        left: 25%;
-        width: fit-content;
-        text-align: center;
-    }
-
-    .badge-followers span {
-        font-size: 0.5em;
-    }
-
-    .gold-badge {
-        color: #725b16;
-    }
-
-    .silver-badge {
-        color: #616161;
-    }
-
-    .bronze-badge {
-        color: #d7ccc8;
-    }
-
-    .badge-verified-gif {
-        width: 5vw;
-        position: absolute;
-        top: 75%;
-        left: 75%;
-        transform: translate(-50%, -50%);
-    }
-
-    .badge-instagram {
-        position: absolute;
-        top: 57%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 2em;
-        width: fit-content;
-        overflow-wrap: anywhere;
-        text-align: center;
-        line-height: 1;
-    }
-
     .insta-space {
         color: #fff;
         font-size: 2vh;
@@ -473,6 +344,35 @@
         margin-top: 1.5vh !important;
         background-color: #3b4877;
         border: 1px solid #3b4877;
+    }
+
+    #badge-panel>div {
+        width: 100%;
+        position: relative;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    #badge-panel>div>img {
+        width: 300px;
+    }
+
+    #badge-panel>div>.follower-count {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        left: 50%;
+        top: 110px;
+        color: #fff;
+        font-size: 40px;
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    .text-on-gold, .text-on-bronze {
+        color: #fff !important;
+    }
+
+    .text-on-silver {
+        color: #474747 !important;
     }
 
     @media only screen and (max-width: 900px) {
