--- a/accounts/templates/errors/404.html
+++ b/accounts/templates/errors/404.html
@@ -6,7 +6,7 @@
     <br /><br />
     <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--6-col">
-            <a href="{% url 'accounts:contact_us' %}">
+            <a href="{% url 'accounts:landing' %}?view=contact">
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored green-btn">
                     <i class="material-icons">question_answer</i>
                     &nbsp;&nbsp;Contact Us
