--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="India's Most Rewarding Influencer Marketing Club">
+    <meta name="description" content="Elite Club of Influencers & Brands">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
@@ -152,14 +152,14 @@
                 <div class="mdl-layout-spacer"></div>
                 <a href="{% url 'accounts:landing' %}?view=how-it-works" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">engineering</i>
-                        &nbsp;How It Works
+                        <i class="material-icons">grade</i>
+                        &nbsp;How It Works For Influencers
                     </button>
                 </a>
                 <a href="{% url 'accounts:landing' %}?view=how-are-we-different" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">wb_incandescent</i>
-                        &nbsp;How Are We Different
+                        <i class="material-icons">local_offer</i>
+                        &nbsp;How It Works For Brands
                     </button>
                 </a>
                 <a href="{% url 'accounts:landing' %}?view=pricing" class="mdl-navigation__link">
@@ -168,12 +168,12 @@
                         &nbsp;Pricing
                     </button>
                 </a>
-                <a href="{% url 'accounts:landing' %}?view=faq" class="mdl-navigation__link">
+                <!-- <a href="{% url 'accounts:landing' %}?view=faq" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">help</i>
                         &nbsp;FAQ
                     </button>
-                </a>
+                </a> -->
                 <a href="{% url 'accounts:landing' %}?view=contact" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">question_answer</i>
@@ -195,14 +195,14 @@
             <nav class="mdl-navigation">
                 <a href="{% url 'accounts:landing' %}?view=how-it-works" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">engineering</i>
-                        &nbsp;How It Works
+                        <i class="material-icons">grade</i>
+                        &nbsp;How It Works For Influencers
                     </button>
                 </a>
                 <a href="{% url 'accounts:landing' %}?view=how-are-we-different" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">wb_incandescent</i>
-                        &nbsp;How Are We Different
+                        <i class="material-icons">local_offer</i>
+                        &nbsp;How It Works For Brands
                     </button>
                 </a>
                 <a href="{% url 'accounts:landing' %}?view=pricing" class="mdl-navigation__link">
@@ -211,12 +211,12 @@
                         &nbsp;Pricing
                     </button>
                 </a>
-                <a href="{% url 'accounts:landing' %}?view=faq" class="mdl-navigation__link">
+                <!-- <a href="{% url 'accounts:landing' %}?view=faq" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">help</i>
                         &nbsp;FAQ
                     </button>
-                </a>
+                </a> -->
                 <a href="{% url 'accounts:landing' %}?view=contact" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">question_answer</i>
