--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -102,7 +102,7 @@
             }
 
             .mdl-layout__drawer.is-visible {
-                width: 75vw;
+                width: 80vw;
             }
 
             .logo-text {
@@ -196,13 +196,13 @@
                 <a href="{% url 'accounts:landing' %}?view=how-it-works" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">grade</i>
-                        &nbsp;How It Works For Influencers
+                        &nbsp;How It Works &#8212; Influencers
                     </button>
                 </a>
                 <a href="{% url 'accounts:landing' %}?view=how-are-we-different" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">local_offer</i>
-                        &nbsp;How It Works For Brands
+                        &nbsp;How It Works &#8212; Brands
                     </button>
                 </a>
                 <a href="{% url 'accounts:landing' %}?view=pricing" class="mdl-navigation__link">
