--- a/accounts/templates/accounts/influencer_registration.html
+++ b/accounts/templates/accounts/influencer_registration.html
@@ -120,7 +120,7 @@
         }
 
         .logo-text {
-            font-size: 4.5vh;
+            font-size: 30px;
             padding-left: 10px;
             font-family: 'Quicksand', sans-serif;
             color: #E0E0E0;
